# guitar-tuner

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/assets/: img_assets.qrc
src/controls/: Main.qml
